app/tikal-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tikal-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tikal-frontend
  template:
    metadata:
      labels:
        app: tikal-frontend
    spec:
      containers:
        - name: tikal-frontend
          image: fmahdi09/tikal-frontend:1.10.0
