app/tikal-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tikal-frontend
  namespace: tikal-frontend
spec:
  selector:
    app: tikal-frontend
  ports:
    - port: 80
      targetPort: 80
