app/tikal-frontend/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tikal-frontend-route
  namespace: tikal-frontend
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system

  hostnames:
    - tikalonline.com

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: tikal-frontend
          port: 80
